--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "angular-cli-ghpages": "^1.0.7",
     "bootstrap": "^5.3.2",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^2.15.0",
