--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -13,12 +13,9 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Use Node.js
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
-        node-version: 14  # O la versión de Node.js que tu proyecto requiera
-
-    - name: Install Angular CLI
-      run: npm install -g @angular/cli
+        node-version: '20.9.0'  # O la versión de Node.js que tu proyecto requiera
 
     - name: Install Dependencies
       run: npm install
