--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -17,6 +17,9 @@ jobs:
       with:
         node-version: '20.9.0'  # O la versión de Node.js que tu proyecto requiera
 
+    - name: Install Angular CLI
+      run: npm install -g @angular/cli
+
     - name: Install Dependencies
       run: npm install
 
